laravel-kubernetes-demo/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel-demo
  labels:
    run: laravel-kubernetes-demo
spec:
  selector:
    run: laravel-kubernetes-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
